--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "dev": "node --loader ts-node/esm --inspect ./src/index.ts",
     "test": "node --loader ts-node/esm --inspect ./src/auth.ts",
+    "build": "tsc",
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,md}\"",
-    "lint:lint-staged": "lint-staged",
+    "lint:lint-staged": "lint-staged"
   },
   "keywords": [
     "chatgpt",
